fix vertical alignment of logo on mobile nav

--- a/source/stylesheets/responsive.css.scss
+++ b/source/stylesheets/responsive.css.scss
@@ -19,7 +19,8 @@
         border-width: 0.5px;
       }
       .logo img {
-        height: 55px;
+        padding-top: 5.5px;
+        height: 45px;
       }
 }
 
